// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureTooltip FeatureTooltip with free plan 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main tooltip StyledProps--padding-medium"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-orange800 StyledProps--font-variation-form-message-warning StyledProps--font-weight-bold StyledProps--padding-bottom-xsmall"
      style="display: flex; align-items: center;"
    >
      <span
        class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-orange800"
        data-icon="flash"
      >
        <svg
          height="25"
          viewBox="0 0 33 28"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="m3.77344 17.341 17.11126-15.591-2.2963 8.909h8.1832l-17.11128 15.591 2.29628-8.909z"
            fill="#ff5310"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      common.levelUp
    </p>
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main flag StyledProps--color StyledProps--color-white StyledProps--padding-bottom-large"
        style="display: flex; align-items: center;"
      >
        common.feature.levelUp.description
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-left-xsmall"
          data-icon="flag"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 32 32"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <clippath
              id="a"
            >
              <path
                d="m0 0h32v32h-32z"
              />
            </clippath>
            <g
              clip-path="url(#a)"
            >
              <path
                d="m4.44477 32c-.98133 0-1.77778-.7964-1.77778-1.7778v-27.55551c0-.98133.79645-1.777774 1.77778-1.777774s1.77778.796444 1.77778 1.777774v27.55551c0 .9814-.79645 1.7778-1.77778 1.7778z"
                fill="#8899a6"
              />
              <path
                d="m4.44477.888916c-.98222 0-1.77778.795554-1.77778 1.777774v27.55551c0 .2454.19911.4445.44445.4445.24533 0 .44444-.1991.44444-.4445v-26.29862c0-.69422.56267-1.25689 1.25689-1.25689h1.40978c0-.98222-.79556-1.777774-1.77778-1.777774z"
                fill="#aab8c2"
              />
              <path
                d="m4.44477 32c-.98133 0-1.77778-.7964-1.77778-1.7778v-27.55551c0-.98133.79645-1.777774 1.77778-1.777774s1.77778.796444 1.77778 1.777774v27.55551c0 .9814-.79645 1.7778-1.77778 1.7778z"
                fill="#8899a6"
              />
              <path
                d="m4.44477.888916c-.98222 0-1.77778.795554-1.77778 1.777774v27.55551c0 .2454.19911.4445.44445.4445.24533 0 .44444-.1991.44444-.4445v-26.29862c0-.69422.56267-1.25689 1.25689-1.25689h1.40978c0-.98222-.79556-1.777774-1.77778-1.777774z"
                fill="#aab8c2"
              />
              <path
                d="m28.7961 2.73953c-1.4791-.63911-3.0551-.95645-4.7964-.98489l-1.2222.33778-4.1112.57422-.8888-.11378c-.2107.04533-.4232.088-.632.13333-1.928.41689-3.76.79467-5.5903.87289l-.8889.88534-5.33329-.88889v16.88887h5.33329l.8889 1.7778h.0685c1.9946-.0853 3.9751-.4942 5.896-.9085l.2578-.0542.5742-.5733 4.8338-.6293.8142.3644c1.4933.0284 2.8382.2978 4.0924.8391.2747.1182.5911.0916.84-.0729.2507-.1653.4009-.4435.4009-.7431v-16.88887c0-.35467-.2107-.67556-.5369-.816z"
                fill="#31373d"
              />
              <path
                d="m11.5552 3.55916c-.2124.00889-.4249.03112-.6373.03112-1.59734 0-3.01867-.27823-4.344-.85067-.27378-.12-.59111-.09156-.84.07378-.25067.16355-.40089.44355-.40089.74222v5.33333s2.92622.88889 6.22219.88889zm6.2223 5.32978s-3.3334.88889-6.2223.88889v6.22227c2.6667 0 6.2223-.8889 6.2223-.8889zm6.2222-.88889v-6.24533c-.0854-.00178-.1654-.01156-.2516-.01156-2.0151 0-4.0186.39289-5.9706.80978v6.336s1.9262-.88889 6.2222-.88889zm-18.1298 13.26045c1.33333.576 2.74666.8827 4.2844.9618h1.4009v-6.2222c-3.70397 0-6.22219-.8889-6.22219-.8889v5.3333c0 .3547.21066.6756.53689.816zm11.9076-6.1493v6.1475c2.056-.4435 4.0097-.8489 5.9706-.8489.0862 0 .1662.0098.2516.0116v-6.1991c-4 0-6.2222.8889-6.2222.8889zm6.2222-.8889c2.3786 0 4.2844.4978 5.3333.848v-6.26314c-1.0195-.33866-2.872-.80711-5.3333-.80711z"
                fill="#e1e8ed"
              />
            </g>
          </svg>
        </span>
      </p>
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-bottom-large"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-bottom-small"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-white"
              data-icon="cd-main"
            >
              <svg
                height="16"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M26.4266 7.06093c1.604.9082 2.5891 2.61496 2.5732 4.45817l-.077 8.9346c-.0155 1.7969-.9805 3.4516-2.5368 4.3499l-8.002 4.6187c-1.5563.8983-3.4717.9062-5.0355.0208l-7.77508-4.4024c-1.60398-.9082-2.58912-2.6149-2.57323-4.4581l.07702-8.9347c.01549-1.79688.98045-3.45151 2.53678-4.34982L13.616 2.67935c1.5563-.89831 3.4717-.90623 5.0355-.02083l7.7751 4.40241Zm-2.829 6.93717c-.4206 1.5856-2.0293 2.5375-3.6019 2.1409l-7.4887-2.0259c-1.2333-.3339-2.51707-.1628-3.6202.48-1.10295.6428-1.89161 1.6795-2.22178 2.9246-.33051 1.2454-.16137 2.5454.47878 3.6646.64015 1.1192 1.67111 1.9171 2.9048 2.2508 1.2334.334 2.5171.1629 3.6201-.4798 1.1031-.6429 1.8918-1.6796 2.2219-2.9247l.2612-1.0464c.0329-.1321-.0459-.2662-.1773-.3018l-1.258-.3405c-.1352-.0366-.274.045-.3079.1809l-.2553 1.0238c-.4259 1.6026-2.0645 2.5569-3.6515 2.1278-1.58229-.4285-2.52298-2.0732-2.09943-3.6705.42065-1.5857 2.02953-2.5383 3.60213-2.1417l7.4885 2.0266c1.2333.3339 2.5171.1629 3.6202-.48 1.103-.6427 1.8916-1.6795 2.2218-2.9246.3305-1.2453.1613-2.5454-.4788-3.6645-.6402-1.11922-1.6711-1.91714-2.9048-2.25088-1.2334-.33394-2.5171-.16289-3.6201.47987-1.1031.64287-1.8918 1.67961-2.2219 2.92471l-.2471.8272c-.0402.1347.0385.2761.1742.3128l1.2581.3405c.1309.0354.2661-.0398.3049-.1697l.2472-.8269c.4259-1.6026 2.0645-2.55683 3.6515-2.1277 1.5823.4284 2.523 2.0731 2.0994 3.6705Z"
                  fill="url(#a)"
                  fill-rule="evenodd"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="a"
                    x1="6.7737"
                    x2="21.5"
                    y1="2"
                    y2="30"
                  >
                    <stop
                      stop-color="#62F91F"
                    />
                    <stop
                      offset="1"
                      stop-color="#45BD35"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            common.purpose.cd.continuous
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-bottom-small StyledProps--padding-left-large StyledProps--color StyledProps--color-white"
          >
            pipeline.featureRestriction.maxBuildsPerMonth100PercentLimit
          </p>
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-alignItems-start"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main btn viewUsageLink Button--with-current-color Button--iconOnly Button--variation Button--variation-link Button--size Button--small"
            data-name="view-usage-link"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Common.viewusage
            </span>
          </button>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--variation Button--variation-primary Button--size Button--small"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              common.explorePlans
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureTooltip FeatureTooltip with no plan 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main tooltip StyledProps--padding-medium"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-orange800 StyledProps--font-variation-form-message-warning StyledProps--font-weight-bold StyledProps--padding-bottom-xsmall"
      style="display: flex; align-items: center;"
    >
      <span
        class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-orange800"
        data-icon="flash"
      >
        <svg
          height="25"
          viewBox="0 0 33 28"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="m3.77344 17.341 17.11126-15.591-2.2963 8.909h8.1832l-17.11128 15.591 2.29628-8.909z"
            fill="#ff5310"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      common.levelUp
    </p>
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main flag StyledProps--color StyledProps--color-white StyledProps--padding-bottom-large"
        style="display: flex; align-items: center;"
      >
        common.feature.levelUp.description
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-left-xsmall"
          data-icon="flag"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 32 32"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <clippath
              id="a"
            >
              <path
                d="m0 0h32v32h-32z"
              />
            </clippath>
            <g
              clip-path="url(#a)"
            >
              <path
                d="m4.44477 32c-.98133 0-1.77778-.7964-1.77778-1.7778v-27.55551c0-.98133.79645-1.777774 1.77778-1.777774s1.77778.796444 1.77778 1.777774v27.55551c0 .9814-.79645 1.7778-1.77778 1.7778z"
                fill="#8899a6"
              />
              <path
                d="m4.44477.888916c-.98222 0-1.77778.795554-1.77778 1.777774v27.55551c0 .2454.19911.4445.44445.4445.24533 0 .44444-.1991.44444-.4445v-26.29862c0-.69422.56267-1.25689 1.25689-1.25689h1.40978c0-.98222-.79556-1.777774-1.77778-1.777774z"
                fill="#aab8c2"
              />
              <path
                d="m4.44477 32c-.98133 0-1.77778-.7964-1.77778-1.7778v-27.55551c0-.98133.79645-1.777774 1.77778-1.777774s1.77778.796444 1.77778 1.777774v27.55551c0 .9814-.79645 1.7778-1.77778 1.7778z"
                fill="#8899a6"
              />
              <path
                d="m4.44477.888916c-.98222 0-1.77778.795554-1.77778 1.777774v27.55551c0 .2454.19911.4445.44445.4445.24533 0 .44444-.1991.44444-.4445v-26.29862c0-.69422.56267-1.25689 1.25689-1.25689h1.40978c0-.98222-.79556-1.777774-1.77778-1.777774z"
                fill="#aab8c2"
              />
              <path
                d="m28.7961 2.73953c-1.4791-.63911-3.0551-.95645-4.7964-.98489l-1.2222.33778-4.1112.57422-.8888-.11378c-.2107.04533-.4232.088-.632.13333-1.928.41689-3.76.79467-5.5903.87289l-.8889.88534-5.33329-.88889v16.88887h5.33329l.8889 1.7778h.0685c1.9946-.0853 3.9751-.4942 5.896-.9085l.2578-.0542.5742-.5733 4.8338-.6293.8142.3644c1.4933.0284 2.8382.2978 4.0924.8391.2747.1182.5911.0916.84-.0729.2507-.1653.4009-.4435.4009-.7431v-16.88887c0-.35467-.2107-.67556-.5369-.816z"
                fill="#31373d"
              />
              <path
                d="m11.5552 3.55916c-.2124.00889-.4249.03112-.6373.03112-1.59734 0-3.01867-.27823-4.344-.85067-.27378-.12-.59111-.09156-.84.07378-.25067.16355-.40089.44355-.40089.74222v5.33333s2.92622.88889 6.22219.88889zm6.2223 5.32978s-3.3334.88889-6.2223.88889v6.22227c2.6667 0 6.2223-.8889 6.2223-.8889zm6.2222-.88889v-6.24533c-.0854-.00178-.1654-.01156-.2516-.01156-2.0151 0-4.0186.39289-5.9706.80978v6.336s1.9262-.88889 6.2222-.88889zm-18.1298 13.26045c1.33333.576 2.74666.8827 4.2844.9618h1.4009v-6.2222c-3.70397 0-6.22219-.8889-6.22219-.8889v5.3333c0 .3547.21066.6756.53689.816zm11.9076-6.1493v6.1475c2.056-.4435 4.0097-.8489 5.9706-.8489.0862 0 .1662.0098.2516.0116v-6.1991c-4 0-6.2222.8889-6.2222.8889zm6.2222-.8889c2.3786 0 4.2844.4978 5.3333.848v-6.26314c-1.0195-.33866-2.872-.80711-5.3333-.80711z"
                fill="#e1e8ed"
              />
            </g>
          </svg>
        </span>
      </p>
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-bottom-large"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-bottom-small"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-bottom-small StyledProps--color StyledProps--color-white"
          >
            Builds
             common.feature.levelUp.planMessage
          </p>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--variation Button--variation-primary Button--size Button--small"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            common.explorePlans
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureTooltip FeatureTooltip with warning message 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main tooltip StyledProps--padding-medium"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-orange800 StyledProps--font-variation-form-message-warning StyledProps--font-weight-bold StyledProps--padding-bottom-xsmall"
      style="display: flex; align-items: center;"
    >
      <span
        class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-orange800"
        data-icon="flash"
      >
        <svg
          height="25"
          viewBox="0 0 33 28"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="m3.77344 17.341 17.11126-15.591-2.2963 8.909h8.1832l-17.11128 15.591 2.29628-8.909z"
            fill="#ff5310"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      common.levelUp
    </p>
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-size-small StyledProps--color StyledProps--color-white StyledProps--padding-bottom-large"
    >
      <p>
        this is warning message
      </p>
    </p>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--variation Button--variation-primary Button--size Button--small"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        common.manageSubscription
      </span>
    </button>
  </div>
</div>
`;

exports[`FeatureTooltip FeatureTooltip without warning message 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main tooltip StyledProps--padding-medium"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-orange800 StyledProps--font-variation-form-message-warning StyledProps--font-weight-bold StyledProps--padding-bottom-xsmall"
      style="display: flex; align-items: center;"
    >
      <span
        class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-orange800"
        data-icon="flash"
      >
        <svg
          height="25"
          viewBox="0 0 33 28"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="m3.77344 17.341 17.11126-15.591-2.2963 8.909h8.1832l-17.11128 15.591 2.29628-8.909z"
            fill="#ff5310"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      common.levelUp
    </p>
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main flag StyledProps--color StyledProps--color-white StyledProps--padding-bottom-large"
        style="display: flex; align-items: center;"
      >
        common.feature.levelUp.description
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-left-xsmall"
          data-icon="flag"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 32 32"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <clippath
              id="a"
            >
              <path
                d="m0 0h32v32h-32z"
              />
            </clippath>
            <g
              clip-path="url(#a)"
            >
              <path
                d="m4.44477 32c-.98133 0-1.77778-.7964-1.77778-1.7778v-27.55551c0-.98133.79645-1.777774 1.77778-1.777774s1.77778.796444 1.77778 1.777774v27.55551c0 .9814-.79645 1.7778-1.77778 1.7778z"
                fill="#8899a6"
              />
              <path
                d="m4.44477.888916c-.98222 0-1.77778.795554-1.77778 1.777774v27.55551c0 .2454.19911.4445.44445.4445.24533 0 .44444-.1991.44444-.4445v-26.29862c0-.69422.56267-1.25689 1.25689-1.25689h1.40978c0-.98222-.79556-1.777774-1.77778-1.777774z"
                fill="#aab8c2"
              />
              <path
                d="m4.44477 32c-.98133 0-1.77778-.7964-1.77778-1.7778v-27.55551c0-.98133.79645-1.777774 1.77778-1.777774s1.77778.796444 1.77778 1.777774v27.55551c0 .9814-.79645 1.7778-1.77778 1.7778z"
                fill="#8899a6"
              />
              <path
                d="m4.44477.888916c-.98222 0-1.77778.795554-1.77778 1.777774v27.55551c0 .2454.19911.4445.44445.4445.24533 0 .44444-.1991.44444-.4445v-26.29862c0-.69422.56267-1.25689 1.25689-1.25689h1.40978c0-.98222-.79556-1.777774-1.77778-1.777774z"
                fill="#aab8c2"
              />
              <path
                d="m28.7961 2.73953c-1.4791-.63911-3.0551-.95645-4.7964-.98489l-1.2222.33778-4.1112.57422-.8888-.11378c-.2107.04533-.4232.088-.632.13333-1.928.41689-3.76.79467-5.5903.87289l-.8889.88534-5.33329-.88889v16.88887h5.33329l.8889 1.7778h.0685c1.9946-.0853 3.9751-.4942 5.896-.9085l.2578-.0542.5742-.5733 4.8338-.6293.8142.3644c1.4933.0284 2.8382.2978 4.0924.8391.2747.1182.5911.0916.84-.0729.2507-.1653.4009-.4435.4009-.7431v-16.88887c0-.35467-.2107-.67556-.5369-.816z"
                fill="#31373d"
              />
              <path
                d="m11.5552 3.55916c-.2124.00889-.4249.03112-.6373.03112-1.59734 0-3.01867-.27823-4.344-.85067-.27378-.12-.59111-.09156-.84.07378-.25067.16355-.40089.44355-.40089.74222v5.33333s2.92622.88889 6.22219.88889zm6.2223 5.32978s-3.3334.88889-6.2223.88889v6.22227c2.6667 0 6.2223-.8889 6.2223-.8889zm6.2222-.88889v-6.24533c-.0854-.00178-.1654-.01156-.2516-.01156-2.0151 0-4.0186.39289-5.9706.80978v6.336s1.9262-.88889 6.2222-.88889zm-18.1298 13.26045c1.33333.576 2.74666.8827 4.2844.9618h1.4009v-6.2222c-3.70397 0-6.22219-.8889-6.22219-.8889v5.3333c0 .3547.21066.6756.53689.816zm11.9076-6.1493v6.1475c2.056-.4435 4.0097-.8489 5.9706-.8489.0862 0 .1662.0098.2516.0116v-6.1991c-4 0-6.2222.8889-6.2222.8889zm6.2222-.8889c2.3786 0 4.2844.4978 5.3333.848v-6.26314c-1.0195-.33866-2.872-.80711-5.3333-.80711z"
                fill="#e1e8ed"
              />
            </g>
          </svg>
        </span>
      </p>
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-bottom-large"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-bottom-small"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-white"
              data-icon="cd-main"
            >
              <svg
                height="16"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M26.4266 7.06093c1.604.9082 2.5891 2.61496 2.5732 4.45817l-.077 8.9346c-.0155 1.7969-.9805 3.4516-2.5368 4.3499l-8.002 4.6187c-1.5563.8983-3.4717.9062-5.0355.0208l-7.77508-4.4024c-1.60398-.9082-2.58912-2.6149-2.57323-4.4581l.07702-8.9347c.01549-1.79688.98045-3.45151 2.53678-4.34982L13.616 2.67935c1.5563-.89831 3.4717-.90623 5.0355-.02083l7.7751 4.40241Zm-2.829 6.93717c-.4206 1.5856-2.0293 2.5375-3.6019 2.1409l-7.4887-2.0259c-1.2333-.3339-2.51707-.1628-3.6202.48-1.10295.6428-1.89161 1.6795-2.22178 2.9246-.33051 1.2454-.16137 2.5454.47878 3.6646.64015 1.1192 1.67111 1.9171 2.9048 2.2508 1.2334.334 2.5171.1629 3.6201-.4798 1.1031-.6429 1.8918-1.6796 2.2219-2.9247l.2612-1.0464c.0329-.1321-.0459-.2662-.1773-.3018l-1.258-.3405c-.1352-.0366-.274.045-.3079.1809l-.2553 1.0238c-.4259 1.6026-2.0645 2.5569-3.6515 2.1278-1.58229-.4285-2.52298-2.0732-2.09943-3.6705.42065-1.5857 2.02953-2.5383 3.60213-2.1417l7.4885 2.0266c1.2333.3339 2.5171.1629 3.6202-.48 1.103-.6427 1.8916-1.6795 2.2218-2.9246.3305-1.2453.1613-2.5454-.4788-3.6645-.6402-1.11922-1.6711-1.91714-2.9048-2.25088-1.2334-.33394-2.5171-.16289-3.6201.47987-1.1031.64287-1.8918 1.67961-2.2219 2.92471l-.2471.8272c-.0402.1347.0385.2761.1742.3128l1.2581.3405c.1309.0354.2661-.0398.3049-.1697l.2472-.8269c.4259-1.6026 2.0645-2.55683 3.6515-2.1277 1.5823.4284 2.523 2.0731 2.0994 3.6705Z"
                  fill="url(#a)"
                  fill-rule="evenodd"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="a"
                    x1="6.7737"
                    x2="21.5"
                    y1="2"
                    y2="30"
                  >
                    <stop
                      stop-color="#62F91F"
                    />
                    <stop
                      offset="1"
                      stop-color="#45BD35"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            common.purpose.cd.continuous
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-bottom-small StyledProps--padding-left-large StyledProps--color StyledProps--color-white"
          >
            pipeline.featureRestriction.maxBuildsPerMonth100PercentLimit
          </p>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--variation Button--variation-primary Button--size Button--small"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            common.manageSubscription
          </span>
        </button>
      </div>
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-bottom-large"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-bottom-small"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-white StyledProps--font-weight-semi-bold StyledProps--padding-bottom-small"
            style="display: flex; align-items: center;"
          >
            <span
              class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-white"
              data-icon="ci-main"
            >
              <svg
                height="16"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M29 16c0 1.6038-.3111 3.1631-.8544 4.5992-.0998.2637-.4365.3299-.6371.1317l-3.989-3.9409c-.1664-.1644-.1943-.4212-.0858-.6285.4326-.8268.6489-1.7725.6489-2.7615.0565-3.2217-2.6-5.87826-5.8783-5.87826-1.0408 0-1.9947.26076-2.8235.70606-.204.10961-.458.08344-.6229-.07926L11.207 4.64368c-.2503-.24699-.1738-.66779.1545-.79382C12.8053 3.29544 14.3394 3 16 3c7.1783 0 13 5.82174 13 13ZM8.47555 5.42062c.23175-.16331.54614-.12936.74662.07111l4.03533 4.03529c.1783.17831.1939.46028.0539.67008-.6307.9455-.9853 2.0581-.9853 3.2594 0 3.2783 2.6565 5.9348 5.9348 5.9348 1.2013 0 2.3139-.3546 3.2594-.9853.2098-.14.4918-.1244.6701.0539l4.3678 4.3679c.2035.2034.235.5235.0651.7557C24.2247 26.8601 20.3994 29 16 29 8.82174 29 3 23.1783 3 16c0-4.4033 2.14366-8.23149 5.47555-10.57938ZM18.2609 17.1304c2.2043 0 3.9565-1.7521 3.9565-3.9565 0-2.2043-1.7522-3.95651-3.9565-3.95651-2.2044 0-3.9566 1.75221-3.9566 3.95651 0 2.2044 1.7522 3.9565 3.9566 3.9565Z"
                  fill="url(#a)"
                  fill-rule="evenodd"
                />
                <defs>
                  <lineargradient
                    gradientUnits="userSpaceOnUse"
                    id="a"
                    x1="-5.39823"
                    x2="11.3982"
                    y1="11.3982"
                    y2="37.3982"
                  >
                    <stop
                      stop-color="#73DFE7"
                    />
                    <stop
                      offset="1"
                      stop-color="#0095F7"
                    />
                  </lineargradient>
                </defs>
              </svg>
            </span>
            common.purpose.ci.continuous
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-bottom-small StyledProps--padding-left-large StyledProps--color StyledProps--color-white"
          >
            common.feature.levelUp.limitMessage.description 
            Deployments
             common.feature.levelup.limitmessage.thismonth.
          </p>
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main btn Button--with-current-color Button--iconOnly Button--variation Button--variation-primary Button--size Button--small"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            common.manageSubscription
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
